# Framework3

./: .gitignore  .gitmodules  CMakeLists.txt  Framework 3.mm  README.md  linux-notes.otl  main.cpp  system.cfg  todo.otl
GLSB/: examples.cpp
GLTools/src/: openglsuperbible_uber.cpp
cmake/: flapstah.cmake
cmake/Modules/: FindGLFW.cmake
cmake/modules/: FindaltGLEW.cmake  FindfreeGLUT.cmake
engine/independent/base/: engine.cpp  engine.h  filesystem.cpp  filesystem.h  thread.cpp  thread.h
engine/independent/common/: build_version.inl  commandargs.cpp  commandargs.h  commandline.cpp  commandline.h  compiletimestringhash.h  config.h  console.cpp  console.h  debug.cpp  debug.h  itime.h  itime.inl  log.cpp  log.h  log.inl  macros.h  runtimestringhash.h  stdafx.cpp  stdafx.h  types.h  version.cpp  version.cpp.in  version.h  version.h.in  versionkeys.h
engine/independent/glfw/: display.cpp  display.h  glfw.cpp  glfw.h
engine/independent/system/: commandline.cpp  commandline.h  configuration.cpp  configuration.h  console.cpp  console.h  log.cpp  log.h  log.inl
engine/independent/time/: fpscalculator.cpp  fpscalculator.h  itime.h  itime.inl  time.cpp  time.h  timer.cpp  timer.h  timevalue.cpp  timevalue.h  timevalue.inl
engine/independent/utility/: callback.h  compiletimestringhash.h  debug.cpp  debug.h  runtimestringhash.h  stringutils.cpp  stringutils.h
engine/independent/video/: display.cpp  display.h
engine/linux/common/: platform_stdafx.h
engine/linux/time/: platform_time.cpp
engine/tools/generate_version/: main.cpp
engine/unit_test/: main.cpp  unittest.cpp  unittest.h
engine/unit_test/tests/: cvartest.cpp  cvartest.h  logtest.cpp  logtest.h  timetest.cpp  typetest.cpp  typetest.h
engine/windows/common/: platform_stdafx.h
engine/windows/time/: platform_time.cpp
miscellaneous/: sudoku.cpp  sudoku.h  sudoku_example.cpp
unit_tests/: cvartest.cpp  cvartest.h  logtest.cpp  logtest.h  main.cpp  timetest.cpp  timetest.h  typetest.cpp  typetest.h  unittest.cpp  unittest.h
